Use jekyll redirect from Command_Line.html

--- a/en/ConEmu.html
+++ b/en/ConEmu.html
@@ -95,7 +95,7 @@ Most settings are configured using the Settings dialog, not from the command lin
 		<li><strong>Warning</strong>: because of frequent non-backwards-compatible API changes in Far 3, it is strongly recommended to use the latest <strong>developer</strong> build when using ConEmu with Far 3. </li>
 	</ul>
 	<li> Import ConEmu&#x27;s macros into Far Manager. Macro files are located in the ConEmu.Addons directory. Each macro file has a description in its header. </li>
-	<li> By default (when started without command-line parameters), ConEmu runs &quot;<tt>far.exe</tt>&quot; from its home folder, or &quot;cmd.exe&quot;/&quot;tcc.exe&quot; if Far Manager was not found. Alternatively, You may indicate any root command by specifying a &quot;<a href="./Command_Line.html">/Cmd &lt;App with params&gt;</a>&quot; argument in ConEmu&#x27;s shortcut or command line.  </li>
+	<li> By default (when started without command-line parameters), ConEmu runs &quot;<tt>far.exe</tt>&quot; from its home folder, or &quot;cmd.exe&quot;/&quot;tcc.exe&quot; if Far Manager was not found. Alternatively, You may indicate any root command by specifying a &quot;<a href="./ConEmuArgs.html">/Cmd &lt;App with params&gt;</a>&quot; argument in ConEmu&#x27;s shortcut or command line.  </li>
 </ol>
 
 <!--<h2><a name="Screenshots"></a>Screenshots<a href="#Screenshots" class="section_anchor"></a></h2>-->
