--- a/en/NewConsole.html
+++ b/en/NewConsole.html
@@ -23,7 +23,7 @@ layout: docs_en
 <p>Or, if you need to run some script with disabled ‘<a href="ConEmuHk.html">Inject ConEmuHk</a>’ from your shell prompt running in the ConEmu tab, you may use ‘-cur_console:i’ switch. </p>
 <pre class="prettyprint">cmd /c -cur_console:i MyBatch.cmd BatchArg1 ... BatchArgN</pre>
 <p>Switches may be used in the: </p>
-<ul><li>ConEmu command line (<tt>/cmd</tt> or <tt>/cmdlist</tt> from <a href="Command_Line.html">ConEmu.exe arguments</a> or ‘Command line’ from the <a href="Settings.html#Startup">Settings</a>); </li>
+<ul><li>ConEmu command line (<tt>/cmd</tt> or <tt>/cmdlist</tt> from <a href="ConEmuArgs.html">ConEmu.exe arguments</a> or ‘Command line’ from the <a href="Settings.html#Startup">Settings</a>); </li>
 <li>ConEmu <a href="Settings.html#Tasks">Tasks</a> (commands area); </li>
 <li>your shell prompt started in ConEmu (‘<a href="ConEmuHk.html">Inject ConEmuHk</a>’ must be enabled in the <a href="Settings.html#Features">Settings</a>); </li>
 <li>and at last within switches of console application running with Default terminal feature. </li></ul><p>You must <strong>not</strong> specify them as ConEmu(64).exe or ConEmuC(64).exe arguments. Specify them AFTER <tt>/cmd</tt> or <tt>/cmdlist</tt> (ConEmu.exe) and <tt>/c</tt> or <tt>/k</tt> (ConEmuC.exe) if you need to use them with ConEmu&#x27;s executables command line. </p>
