--- a/en/MemoryDump.html
+++ b/en/MemoryDump.html
@@ -1,5 +1,6 @@
 ---
 layout: docs_en
+redirect_from: MiniDump.html
 ---
 
 <!-- Content starts -->
@@ -24,7 +25,7 @@ layout: docs_en
 <pre class="prettyprint">&quot;C:\Program Files\ConEmu\ConEmu\ConEmuC.exe&quot; /DEBUGPID=Your_PID /FULL</pre>
 <p>Or, create a small process memory dump. Yes, it will be small, but may contains not enough information for detecting a problem. </p>
 <pre class="prettyprint">&quot;C:\Program Files\ConEmu\ConEmu\ConEmuC.exe&quot; /DEBUGPID=Your_PID /MINI</pre>
-<p>Substitute <i>Your_PID</i> with the process ID, <a href="MiniDump.html#How_to_find_Process_ID_(PID)">read below</a>. You will be offered to choose filename for a minidump. </p>
+<p>Substitute <i>Your_PID</i> with the process ID, <a href="MemoryDump.html#How_to_find_Process_ID_(PID)">read below</a>. You will be offered to choose filename for a minidump. </p>
 <p><i><strong>Warning!</strong></i> Before creating dumps of Far Manager please ensure that &quot;far.exe&quot; was started with &quot;/x&quot; switch. </p>
 
 <h2><a name="Using_Windows_Task_manager"></a>Using Windows Task manager<a href="#Using_Windows_Task_manager" class="section_anchor"></a></h2>
