--- a/ru/ConEmuFAQ.html
+++ b/ru/ConEmuFAQ.html
@@ -403,10 +403,10 @@ cmd -cur_console:s2THn</pre>
 <h2><a name="Аварийные_завершения"></a>Аварийные завершения<a href="#Аварийные_завершения" class="section_anchor"></a></h2>
 
 <h3><a name="Q._При_завершении_консольной_програ"></a>Q. При завершении консольной программы возникает ошибка вида: Access violation at address 6F78DE5B in module &#x27;ConEmuHk.dll&#x27;. Read of address 0071004E<a href="#Q._При_завершении_консольной_програ" class="section_anchor"></a></h3>
-<p>A. Возможная причина - эта консольная программа порушила свою таблицу импортов. Решение - обратиться к ее разработчику. Для более точного вердикта &quot;кто виноват&quot; можно прислать мне <a href="MiniDump.html">минидамп</a>. </p>
+<p>A. Возможная причина - эта консольная программа порушила свою таблицу импортов. Решение - обратиться к ее разработчику. Для более точного вердикта &quot;кто виноват&quot; можно прислать мне <a href="MemoryDump.html">минидамп</a>. </p>
 
 <h3><a name="Q._ConEmu_или_консольное_приложение_за"></a>Q. ConEmu или консольное приложение зависает при выходе?<a href="#Q._ConEmu_или_консольное_приложение_за" class="section_anchor"></a></h3>
-<p>A. Ни одного Issue на эту тему еще не было создано. Тем не менее, если случилось зависание при выходе, сделайте <a href="MiniDump.html">дампы памяти</a> процессов ConEmu<tt>*</tt>.exe, ConEmuC<tt>*</tt>.exe и и всех процессов этой консоли (far.exe, cmd.exe, ...). Как это сделать смотрите ниже. Заархивировать и прислать файлы разработчику. Для создания правильного дампа 32битного приложения в 64битной ОС нужно использовать ConEmu. </p>
+<p>A. Ни одного Issue на эту тему еще не было создано. Тем не менее, если случилось зависание при выходе, сделайте <a href="MemoryDump.html">дампы памяти</a> процессов ConEmu<tt>*</tt>.exe, ConEmuC<tt>*</tt>.exe и и всех процессов этой консоли (far.exe, cmd.exe, ...). Как это сделать смотрите ниже. Заархивировать и прислать файлы разработчику. Для создания правильного дампа 32битного приложения в 64битной ОС нужно использовать ConEmu. </p>
 
 <h3><a name="Q._Как_создать_дамп_памяти_приложен"></a>Q. Как создать дамп памяти приложения?<a href="#Q._Как_создать_дамп_памяти_приложен" class="section_anchor"></a></h3>
 <p>
