--- a/ru/Whats_New_2.html
+++ b/ru/Whats_New_2.html
@@ -33,7 +33,7 @@ layout: docs_ru
 &quot;ESC [ 2 1 t&quot; --&gt; Report window’s title as &quot;ESC ] l title ESC \&quot;</pre>
 <li>ANSI xterm256. When line was wrapped (long prompt or output) </li><ul><li>extended atributes was not shifted properly; </li>
 <li>rest of line was printed char-by-char. </li></ul><li><a title="запуск под WinPE"  href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1403">Issue 1403</a>: Seamless start with default <a href="ConEmu.html">ConEmu</a> config in WinPE. </li>
-<li>Ready to create <a href="MiniDump.html">MiniDump</a> in WinPE. </li>
+<li>Ready to create <a href="MemoryDump.html">MiniDump</a> in WinPE. </li>
 <li>Try to use &#x27;Courier New&#x27; as border font if &#x27;Lucida Console&#x27; fails </li>
 <li><a title="Angular quotation marks in the English translation" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1399">&nbsp;Issue 1399&nbsp;</a>: Angular quotation marks in the English translation. </li>
 <li><a title="Environment variables dont't work in update path to 7zip" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1400">&nbsp;Issue 1400&nbsp;</a>: Environment variables dont&#x27;t work in update path to 7zip </li>
