--- a/en/ConEmuFAQ.html
+++ b/en/ConEmuFAQ.html
@@ -306,10 +306,10 @@ cmd -cur_console:s2THn</pre>
 <h2><a name="Abnormal_termination"></a>Abnormal termination<a href="#Abnormal_termination" class="section_anchor"></a></h2>
 
 <h3><a name="Q._Upon_exiting_from_a_console_program,_an_error_such_as_the_fol"></a>Q. Upon exiting from a console program, an error such as the following appears: Access violation at address 6F78DE5B in module &#x27;ConEmuHk.dll&#x27;. Read of address 0071004E<a href="#Q._Upon_exiting_from_a_console_program,_an_error_such_as_the_fol" class="section_anchor"></a></h3>
-<p>A. One possible cause is when the program destroys its own import table. The proper solution would be to contact the application developer. For a precise verdict, send me a <a href="MiniDump.html">minidump</a>. </p>
+<p>A. One possible cause is when the program destroys its own import table. The proper solution would be to contact the application developer. For a precise verdict, send me a <a href="MemoryDump.html">minidump</a>. </p>
 
 <h3><a name="Q._ConEmu_or_console_application_hangs_on_exit"></a>Q. ConEmu or console application hangs on exit<a href="#Q._ConEmu_or_console_application_hangs_on_exit" class="section_anchor"></a></h3>
-<p>A. No issues for this problem have been filed so far. Nevertheless, if hang occures on exit, create <a href="MiniDump.html">minidumps</a> for the processes ConEmu<tt>*</tt>.exe, ConEmuC<tt>*</tt>.exe and all console processes (far.exe, cmd.exe...) See below for instructions. Pack up and submit the <a href="MiniDump.html">minidumps</a> to the developer. To correctly create a <a href="MiniDump.html">minidump</a> of a 32-bit application in a 64-bit OS, you must use ConEmu. </p>
+<p>A. No issues for this problem have been filed so far. Nevertheless, if hang occures on exit, create <a href="MemoryDump.html">minidumps</a> for the processes ConEmu<tt>*</tt>.exe, ConEmuC<tt>*</tt>.exe and all console processes (far.exe, cmd.exe...) See below for instructions. Pack up and submit the <a href="MemoryDump.html">minidumps</a> to the developer. To correctly create a <a href="MemoryDump.html">minidump</a> of a 32-bit application in a 64-bit OS, you must use ConEmu. </p>
 
 <h3><a name="Q._How_to_create_a_minidump"></a>Q. How to create a minidump<a href="#Q._How_to_create_a_minidump" class="section_anchor"></a></h3>
 <p>A. Windows XP and above. <blockquote>Press <strong>Win+R</strong> and run the following command, it will create a full process memory dump (it may be large enough). 
@@ -317,7 +317,7 @@ cmd -cur_console:s2THn</pre>
 <pre class="prettyprint">C:\Program Files\ConEmu\ConEmu\ConEmuC.exe /DEBUGPID=Your_PID /FULL</pre>
 Or, create a small process memory dump. Yes, it will be small, but may contains not enough information for detecting a problem. 
 <pre class="prettyprint">C:\Program Files\ConEmu\ConEmu\ConEmuC.exe /DEBUGPID=Your_PID /MINI</pre>
-</blockquote><blockquote>Substitute <i>Your_PID</i> with the process ID, <a href="MiniDump.html#How_to_find_Process_ID_(PID)">read below</a>. You will be offered to choose filename for a minidump. 
+</blockquote><blockquote>Substitute <i>Your_PID</i> with the process ID, <a href="MemoryDump.html#How_to_find_Process_ID_(PID)">read below</a>. You will be offered to choose filename for a minidump. 
 </blockquote><blockquote><i><strong>Warning!</strong></i> Before creating dumps of Far Manager please ensure that &quot;far.exe&quot; was started with &quot;/x&quot; switch. 
 </blockquote><p>A. Windows 7 and up. <blockquote><i>Warning! This method only works for processes with the same bitness as the operating system. Therefore, you won&#x27;t be able to create a working minidump for 32-bit processes when using a 64-bit Windows version.</i> 
 </blockquote>    <blockquote>Open Windows&#x27; Task Manager, switch to the &quot;Processes&quot; tab, right-click the process, and select &quot;Create dump file&quot;. 
