--- a/en/DefaultTerminal.html
+++ b/en/DefaultTerminal.html
@@ -1,5 +1,6 @@
 ---
 layout: docs_en
+redirect_from: /en/DefTerm.html
 ---
 
 <!-- Content starts -->
@@ -19,7 +20,8 @@ layout: docs_en
 <li><a href="http://stackoverflow.com/q/19599107/1405560" rel="nofollow">C# debug log console app</a> </li></ul><p>ConEmu build 121124 introduced unique feature: ‘Replace default Windows terminal’. </p>
 
 <h1><a name="Description"></a>Description<a href="#Description" class="section_anchor"></a></h1>
-<p><img src="../img/Settings-DefTerm.png" title="ConEmu settings, DefTerm page" alt="ConEmu settings, DefTerm page"> </p>
+<p><img src="../img/Settings-DefTerm.png" title="ConEmu settings, DefTerm page" alt="ConEmu settings, DefTerm page">
+<div><a href="SettingsDefTerm.html">Settings page description</a></div></p>
 <p>Just turn on checkbox ‘Force ConEmu as default terminal for console applications’, optionally turn on checkbox ‘Register on OS startup’ and point ‘parent’ applications from you like to start console tools (for example <tt>explorer.exe|devenv.exe|totalcmd.exe</tt>) and voila. You may press <strong>Win</strong>+<strong>R</strong> type <tt>ipconfig /all</tt> and press <strong>Enter</strong>. It will starts in the new ConEmu tab. </p>
 <p>When you run console application from specified ‘parent’ application, your console application will be started in the new ConEmu tab. </p>
 <p>The only exception - consoles started ‘As administrator’ can&#x27;t be hooked yet. </p>
