--- a/en/Whats_New.html
+++ b/en/Whats_New.html
@@ -9,10 +9,21 @@ layout: docs_en
 <p>You can show your appreciation and support future development by donating. <a href="http://conemu.github.io/donate.html" rel="nofollow">Donate</a> button located on <a href="http://code.google.com/p/conemu-maximus5" rel="nofollow">main page</a> under ConEmu sketch (upper right of page). </p>
 <p>Votes and awards (vote for ConEmu, if you please) <a href="http://code.google.com/p/conemu-maximus5/wiki/Awards" rel="nofollow">http://code.google.com/p/conemu-maximus5/wiki/Awards</a> </p>
 
-<h2 id="h0"><a name="Build_150319"></a>Build 150319<a href="#Build_150319" class="section_anchor"></a></h2>
+
+<h2><a name="Build_150327"></a>Build 150327<a href="#Build_150327" class="section_anchor"></a></h2>
+<ul><li>All links were updated to ‘http://conemu.github.io’. </li>
+<li>Default StatusBar columns were changed. </li>
+<li>In some cases font size (StatusBar, TabBar) was smaller than expected in new configs. </li>
+<li>Allow to stop buzzing when started with '-basic' switch. </li>
+<li><a href="/auto.html#cinst">Сhocolatey packets</a> are released officially now. </li>
+</ul>
+
+
+<h2><a name="Build_150319"></a>Build 150319<a href="#Build_150319" class="section_anchor"></a></h2>
 <ul><li>Some required switches were not used while creating jump lists (<tt>/FontDir</tt>, <tt>/FontFile</tt>, etc.) </li>
 <li><tt>PostPromptCmd</tt> was not working with Far 3. </li>
-<li>Added hotkey to activate ConEmu window and do ‘CD’ to the last (top in Z-order) Explorer window path. <a href="GuiMacro.html">GuiMacro</a> is available: </li><pre class="prettyprint">PasteExplorerPath (&lt;DoCd&gt;,&lt;SetFocus&gt;)
+<li>Added hotkey to activate ConEmu window and do ‘CD’ to the last (top in Z-order) Explorer window path. <a href="GuiMacro.html">GuiMacro</a> is available: </li>
+<pre class="prettyprint">PasteExplorerPath (&lt;DoCd&gt;,&lt;SetFocus&gt;)
   DoCd: 1 - ‘CD’, 0 - paste path only
   SetFocus: 1 - bring ConEmu to the top, 0 - don&#x27;t change active window</pre>
 </ul>
