--- a/auto.html
+++ b/auto.html
@@ -10,7 +10,10 @@ title: "ConEmu - automate installation"
 <div class="text">If you need to automate your box installation, this page describes how to
 setup ConEmu via PowerShell with single command. Internet connection required.</div>
 
-<h2>Default automatic installation</h2>
+
+
+<!-- ******************************* -->
+<h2><a name="default"></a>Default automatic installation<a href="#default" class="section_anchor"></a></h2>
 
 <div><table border="1">
 <tr><td>ConEmu version</td><td>Latest</td></tr>
@@ -25,7 +28,8 @@ setup ConEmu via PowerShell with single command. Internet connection required.</
 
 
 
-<h2>Automatic installation with parameters</h2>
+<!-- ******************************* -->
+<h2><a name="params"></a>Automatic installation with parameters<a href="#params" class="section_anchor"></a></h2>
 
 <div class="text">If you need to customize parameters (folder, default xml file, etc.) you may use another syntax. Note, ‘install2.ps1’ is used here instead of ‘install.ps1’.</div>
 
@@ -41,7 +45,21 @@ setup ConEmu via PowerShell with single command. Internet connection required.</
 
 <code>powershell -NoProfile -ExecutionPolicy Unrestricted -Command "set ver 'alpha'; set dst 'C:\ConEmu'; set lnk $TRUE; set run $TRUE; set xml 'https://conemu.github.io/ConEmu.xml'; iex ((new-object net.webclient).DownloadString('https://conemu.github.io/install2.ps1'))"</code>
 
-<h2>Manual installation</h2>
-<div><a href="http://www.fosshub.com/ConEmu.html"><img src="./img/Downloads.png" alt="Fosshub.com" title="Fosshub.com mirror"/></div>
+
+<!-- ******************************* -->
+<h2><a name="cinst"></a>Using chocolatey<a href="#cinst" class="section_anchor"></a></h2>
+
+<div class="text"><a href="https://chocolatey.org/">Chocolatey</a> is a Machine Package Manager, somewhat like apt-get, but built with Windows in mind.
+When you have Chocolatey installed on your PC you can install ConEmu with one command.
+ConEmu will be installed in your ‘Program Files’ folder using actual version of ‘ConEmuSetup.exe’.</div>
+
+<code>choco install conemu</code>
+
+
+
+<!-- ******************************* -->
+<h2><a name="manual"></a>Manual installation<a href="#manual" class="section_anchor"></a></h2>
+<div class="text">Just choose preferred format (7-zip, installer or PortableApps.com), download and unpack or install ConEmu. </div>
+<div><a href="/en/Downloads.html"><img src="./img/Downloads.png" alt="Download mirrors" title="Choose ConEmu download mirrors"/></div>
 
 <!-- Content ends -->
