Add #funding anchor

--- a/donate.html
+++ b/donate.html
@@ -8,7 +8,7 @@ title: "ConEmu donation"
 
 <h1 id="h0">Support ConEmu</h1>
 
-<h2>PayPal</h2>
+<h2><a name="funding"></a>PayPal<a href="#funding" class="section_anchor"></a></h2>
 <div class="text">If you can't use <a href="#yandex">Yandex.Money</a> or other methods please contact me by<br>
 e-mail <img style="position: relative; top: 0.25em;" src="./img/email.png"> or twitter <a href="https://twitter.com/ConEmuMaximus5">@ConEmuMaximus5</a>
 <br>and I will send you my dedicated PayPal address in response,<br>
