--- a/donate.html
+++ b/donate.html
@@ -6,7 +6,21 @@ title: "ConEmu donation"
 
 <!-- Content starts -->
 
-<h1 id="h0">Support ConEmu</h1>
+<h1 id="h0">Support ConEmu development</h1>
+
+<p>ConEmu-Maximus5 was brought to life and is supported by almost single developer efforts.
+The most valuable resource is time actually, hundreds of hours. But of course there are other expenses,
+minor or considerable: hardware used for developing and testing, digital certificate for signing
+ConEmu binaries (current one was obtained by courtesy of <a href="Certum.pl">Certum.pl</a></p>),
+hosting... </p>
+
+<p>You can show your appreciation and support further development and maintaining by contributing with
+<a href="/en/Issues.html">bugreporting</a>,
+<a href="#funding">funding (look below)</a>,
+<a href="https://github.com/ConEmu/ConEmu.github.io">documentation</a>,
+<a href="https://github.com/Maximus5/ConEmu">code</a>
+or anything else, spreading the word for example. </p>
+
 
 <h2><a name="funding"></a>PayPal<a href="#funding" class="section_anchor"></a></h2>
 <div class="text">If you can't use <a href="#yandex">Yandex.Money</a> or other methods please contact me by<br>
