Add title and description

--- a/donate.html
+++ b/donate.html
@@ -1,6 +1,10 @@
 ---
 layout: root
-title: "ConEmu donation"
+
+title: Support ConEmu development by donation
+
+description: "You can show your appreciation and support further development and maintaining
+   by contributing with bugreporting, funding, documentation, code or anything else."
 ---
 
 
