Update from page description

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 ---
 layout: root
-title: "ConEmu - Windows Console Emulator"
+
+title: ConEmu - Handy Windows Terminal
+
+description: "ConEmu-Maximus5 provides full-featured local terminal for Windows developers, administrators or users.
+   Tabs, splits, optional Quake style, handy copy and paste, ANSI, CJK, UTF-8, DosBox and PuTTY integration, and much more..."
 ---
 
 
@@ -54,7 +58,7 @@ src="./img/FlattrBadgeLarge.png" alt="Flattr ConEmu" title="Flattr ConEmu" borde
 
 <ul><li>smooth and friendly window resizing; </li>
 	<li>tabs for editors, viewers, panels and consoles; </li>
-	<li>run simple GUI apps in tabs; </li>
+	<li>run simple <a href="/en/ChildGui.html">GUI apps</a> like PuTTY in tabs; </li>
 	<li>Windows 7 <a href="./en/Windows7Taskbar.html#Customizable_Jump_list">Jump Lists</a> and <a href="./en/Progress.html">Progress</a> on Taskbar buttons; </li>
 	<li>easily run old <a href="./en/DosBox.html">DOS applications</a> (games) in Windows 7 or 64-bit OS; </li>
 	<li>thumbnails and tiles in Far Manager; </li>
