May be called from GuiMacro

--- a/en/LaunchNewTab.html
+++ b/en/LaunchNewTab.html
@@ -29,6 +29,7 @@
 <ul><li>Keyboard (Win+W by default), or </li>
 	<li><img src="../img/ConEmuAddBtn.png" title="Toolbar" alt="Toolbar"> </li>
 	<li><img src="../img/ConEmuAddSys.png" title="System menu" alt="System menu"> </li>
+	<li>GuiMacro <a href="GuiMacro.html#Recreate">Create(0,1)</a> </li>
 </ul>
 </p>
 <p>Well, what you can do with this dialog? <ul><li>Choose command line and startup directory for new process. You may use environment variables in both fields. Also, you may choose from drop down list either any of predefined <a href="Tasks.html">tasks</a> or any command from history. </li>
