--- a/ru/LaunchNewTab.html
+++ b/ru/LaunchNewTab.html
@@ -25,9 +25,13 @@
 <h2><a name="Create_new_console_dialog"></a>Create new console dialog<a href="#Create_new_console_dialog" class="section_anchor"></a></h2>
 <p>How to start application (tcc, powershell, far, putty) in ConEmu tab? </p>
 <p><img src="../img/ConEmuCreate.png" title="ConEmu confirmation of new console creation" alt="ConEmu new console"> </p>
-<p>This dialog may be opened from: <ul><li>Keyboard (Win+W by default), or </li>
-<li><img src="../img/ConEmuAddBtn.png" title="Toolbar" alt="Toolbar"> </li>
-<li><img src="../img/ConEmuAddSys.png" title="System menu" alt="System menu"> </li></ul></p>
+<p>This dialog may be opened from:
+<ul><li>Keyboard (Win+W by default), or </li>
+	<li><img src="../img/ConEmuAddBtn.png" title="Toolbar" alt="Toolbar"> </li>
+	<li><img src="../img/ConEmuAddSys.png" title="System menu" alt="System menu"> </li>
+	<li>GuiMacro <a href="GuiMacro.html#Recreate">Create(0,1)</a> </li>
+</ul>
+</p>
 <p>Well, what you can do with this dialog? <ul><li>Choose command line and startup directory for new process. You may use environment variables in both fields. Also, you may choose from drop down list either any of predefined <a href="Tasks.html">tasks</a> or any command from history. </li>
 <li>Choose another user name and password, ‘Restricted current user’ account or ‘Run as administrator’ feature. </li>
 <li>You may split active tab vertically or horizontally (you need last alpha versions for this feature). </li>
